--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -43,3 +43,11 @@ main {
 .small-container {
   max-width: 600px;
 }
+.checkout-steps > div {
+  border-bottom: 0.2rem solid #696969;
+  color: #696969;
+}
+.checkout-steps > div.active {
+  border-bottom: 0.2rem solid #D22B2B;
+  color: #D22B2B;
+}
