Order History Screen fixes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,3 +51,7 @@ main {
   border-bottom: 0.2rem solid #D22B2B;
   color: #D22B2B;
 }
+/* tr:hover {
+  background-color: #d3d3d381; */
+
+/* tr:hover td { background: transparent; } */
