--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -51,7 +51,12 @@ main {
   border-bottom: 0.2rem solid #D22B2B;
   color: #D22B2B;
 }
-/* tr:hover {
-  background-color: #d3d3d381; */
-
+tr:hover {
+  background-color: #d3d3d381;}
+thead {
+background-color: darkgray;
+}
+td, tr,thead{
+  border: 0.1px solid rgb(233, 233, 233);
+}
 /* tr:hover td { background: transparent; } */
