--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -53,10 +53,13 @@ main {
 }
 tr:hover {
   background-color: #d3d3d381;}
+
 thead {
 background-color: darkgray;
 }
 td, tr,thead{
   border: 0.1px solid rgb(233, 233, 233);
 }
-/* tr:hover td { background: transparent; } */
+NavDropdown:hover{
+background-color: #D22B2B;
+}
