--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -91,3 +91,10 @@ background-color: #D22B2B;
 .active-nav {
   left: 0;
 }
+.text-bold {
+  font-weight: bold;
+}
+a, a:hover, a:focus, a:active {
+  text-decoration: none;
+  color: inherit;
+  }
